# ratio

./: CMakeLists.txt  main.cpp  ratio.h
